--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,14 @@
-# Node/Next
 node_modules
 .next
 out
-.vercel
 dist
-.cache
+.vercel
 .turbo
 coverage
-
-# Env & OS
 .env
 .env.*
 !.env.example
 .DS_Store
-
-# Logs
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+yarn-*.log*
 pnpm-debug.log*
